# fastapi-crud

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: configuration.py  logger.py  main.py
api/alembic/: env.py
api/alembic/versions/: 6886a88de6b6_.py
api/endpoints/: portfolio.py  users.py
api/enums/: portfolio_type.py  subscription_plan.py
api/models/: __init__.py  base.py  fields.py  portfolio.py  user.py
api/repositories/: base.py  portfolio.py  user.py
api/schemas/: portfolio.py  user.py
db/: init.sh
db/schema_queries/: create_schema.sql  insert.sql
